Play around with metrics filtering
